# veil

./: CLAUDE.md  Cargo.toml  Dockerfile.relay  ROADMAP.md  deploy-relay.sh
.github/workflows/: ci.yml
crates/veil-core/: Cargo.toml
crates/veil-core/src/: compression.rs  control.rs  dedup.rs  emoji.rs  group.rs  invite.rs  lib.rs  link.rs  media.rs  message.rs  validation.rs
crates/veil-crypto/: Cargo.toml
crates/veil-crypto/src/: dm.rs  group_key.rs  identity.rs  keystore.rs  lib.rs  mnemonic.rs
crates/veil-net/: Cargo.toml
crates/veil-net/src/: discovery.rs  framing.rs  lib.rs  manager.rs  peer.rs  protocol.rs  rate_limit.rs  relay_client.rs
crates/veil-net/tests/: integration.rs
crates/veil-relay/: Cargo.toml
crates/veil-relay/src/: directory.rs  lib.rs  mailbox.rs  main.rs  protocol.rs  server.rs  voice.rs
crates/veil-store/: Cargo.toml
crates/veil-store/src/: blob.rs  db.rs  lib.rs
docs/: getting-started.md
veil-app/: index.html  package-lock.json  package.json
veil-app/src/: App.tsx
veil-app/src-tauri/: Cargo.toml  tauri.conf.json
veil-app/src-tauri/capabilities/: default.json
veil-app/src-tauri/src/: commands.rs  lib.rs  main.rs  network.rs  state.rs
veil-app/src/api/: auth.ts  channels.ts  client.ts  files.ts  index.ts  messages.ts  servers.ts  ws.ts
veil-app/src/components/chat/: EmojiGifPicker.module.css  EmojiGifPicker.tsx
veil-app/src/components/common/: Avatar.module.css  Avatar.tsx  Badge.module.css  Badge.tsx  Separator.tsx  StatusDot.module.css  StatusDot.tsx  index.ts
veil-app/src/components/layout/: ChannelSidebar.module.css  ChannelSidebar.tsx  ChatArea.module.css  ChatArea.tsx  MainLayout.tsx  MemberList.module.css  MemberList.tsx  ServerStrip.module.css  ServerStrip.tsx  index.ts
veil-app/src/components/modals/: CreateChannelModal.tsx  CreateGroupModal.tsx  DeleteGroupModal.tsx  JoinServerModal.tsx  Modal.module.css  index.ts
veil-app/src/components/settings/: SettingsPanel.module.css  SettingsPanel.tsx
veil-app/src/components/setup/: LoadingScreen.module.css  LoadingScreen.tsx  Onboarding.module.css  Onboarding.tsx  RecoveryPhrase.module.css  RecoveryPhrase.tsx  ServerConnect.tsx  SetupFlow.module.css  SetupFlow.tsx  index.ts
veil-app/src/components/voice/: VoiceControls.module.css  VoiceControls.tsx
veil-app/src/hooks/: useTauriEvents.ts  useWebSocketEvents.ts
veil-app/src/store/: appStore.ts  messageMapping.ts
veil-app/src/theme/: global.css  index.ts  tokens.css
veil-app/src/types/: events.ts  groups.ts  identity.ts  index.ts  messages.ts  voice.ts
veil-app/src/voice/: WebRTCManager.ts  encryptionWorker.ts
veil-client/: Cargo.toml
veil-client/src/: main.rs  ui.rs
veil-client/src/ui/: app.rs  control.rs  message.rs  mod.rs  network.rs  setup.rs  tests.rs  types.rs
veil-client/src/ui/update/: chat.rs  contacts.rs  files.rs  identity.rs  invites.rs  mod.rs  network_events.rs  relay.rs  settings.rs  social.rs
veil-client/src/ui/views/: chat.rs  messages.rs  mod.rs  settings.rs  setup.rs  sidebar.rs
