[package]
name = "veil-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veil-crypto.workspace = true
serde.workspace = true
bincode.workspace = true
chrono.workspace = true
uuid.workspace = true
lru.workspace = true
thiserror.workspace = true
blake3.workspace = true
base64.workspace = true
zstd.workspace = true
infer.workspace = true
image.workspace = true
symphonia.workspace = true
linkify.workspace = true
scraper.workspace = true

[lints]
workspace = true
