[package]
name = "veil-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
rand.workspace = true
serde.workspace = true
bincode.workspace = true
argon2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
