[package]
name = "veil-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veil-core.workspace = true
veil-crypto.workspace = true
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
veil-store.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
rcgen = "0.13"
rand.workspace = true
hex.workspace = true
mdns-sd.workspace = true
veil-relay.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
