[package]
name = "veil-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-knowledge encrypted relay for Veil — runs anywhere"

[[bin]]
name = "veil-relay"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek.workspace = true
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
rcgen = "0.13"
rand.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
