[package]
name = "veil-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veil-core.workspace = true
veil-crypto.workspace = true
redb.workspace = true
reed-solomon-erasure.workspace = true
serde.workspace = true
bincode.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
