[package]
name = "veil-app"
version.workspace = true
edition.workspace = true
description = "Veil — encrypted decentralized messenger"
authors = ["esoc"]

[lib]
name = "veil_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { workspace = true }
serde_json = "1"
